# rust_libloading

./: .travis.yml  Cargo.toml  LICENSE  README  README.mkd  appveyor.yml  build.rs  make-doc.sh  vim.exe.stackdump
.github/workflows/: libloading.yml
examples/: e1.rs
src/: as_filename.rs  as_symbol_name.rs  changelog.rs  error.rs  lib.rs  lib_impl.rs  result.rs  safe.rs  test_helpers.rs  util.rs
src/error/: get_last_error.rs  get_last_error_fail.rs  library_close.rs  library_find_symbol.rs  library_open.rs  mod.rs  os_error.rs  os_error_failure.rs  sharedlib_error.rs  sharedlib_result.rs
src/lib_impl/: lib.rs  lib_arc.rs  lib_rc.rs  lib_tracked.rs  lib_unsafe.rs  mod.rs
src/os/: mod.rs
src/os/unix/: consts.rs  dl_info.rs  dlerror_mutex.rs  external.rs  lib.rs  mod.rs  ok_or_dlerror.rs  rtld_lazy.rs  rtld_now.rs  util.rs
src/os/util/: c_string_as_ref.rs  cow_c_string.rs  mod.rs  null_error.rs
src/os/windows/: error_mode_guard.rs  lib.rs  mod.rs  ok_or_get_last_error.rs  use_errormode.rs  util.rs
src/string/error/: get_last_error.rs  get_last_error_fail.rs  library_close.rs  library_find_symbol.rs  library_open.rs  mod.rs  os_error.rs  os_error_failure.rs
src/symbol/: data.rs  data_arc.rs  data_rc.rs  data_tracked.rs  data_unsafe.rs  func.rs  func_arc.rs  func_rc.rs  func_tracked.rs  func_unsafe.rs  mod.rs  symbol.rs
src/test/: mod.rs  windows.rs
src/test/unix/: libm.rs  mod.rs  shared.rs
src/util/: error_guard.rs  error_mutex.rs  mod.rs  null_terminate.rs
tests/: constants.rs  functions.rs  lib.rs  library_filename.rs  markers.rs  ordinals.def  send.rs  statics.rs  windows.rs
