[package]
name = "libloading"
# When bumping
# * Don’t forget to add an entry to `src/changelog.rs`
# * If bumping a incompatible version, adjust documentation in `src/lib.rs`
version = "0.6.5"
authors = ["Simonas Kazlauskas <libloading@kazlauskas.me>"]
license = "ISC"
repository = "https://github.com/nagisa/rust_libloading/"
documentation = "https://docs.rs/libloading/"
readme = "README.mkd"
description = "A safer binding to platform’s dynamic library loading utilities"
keywords = ["dlopen", "load", "shared", "dylib"]
categories = ["api-bindings"]

[target.'cfg(windows)'.dependencies.winapi]
version = ">=0.3.0, <0.4"
features = [
    "winerror",
    "errhandlingapi",
    "libloaderapi",
]

[target.'cfg(unix)'.dependencies.cfg-if]
version = ">=0.1.10, <2"

# We make some more rigorous checks in CI
[target.'cfg(ci)'.dependencies]
libc = ">=0.2.7, <0.3"
static_assertions = ">=1.0.0, <2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
