[package]
name = "libloading"
# When bumping
# * Don’t forget to add an entry to `src/changelog.rs`
# * If bumping a incompatible version, adjust documentation in `src/lib.rs`
version = "0.7.0"
authors = ["Simonas Kazlauskas <libloading@kazlauskas.me>"]
license = "ISC"
repository = "https://github.com/nagisa/rust_libloading/"
documentation = "https://docs.rs/libloading/"
readme = "README.mkd"
description = "A safer binding to platform’s dynamic library loading utilities"
keywords = ["dlopen", "load", "shared", "dylib"]
categories = ["api-bindings"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "libloaderapi",
]

[target.'cfg(unix)'.dependencies.cfg-if]
version = "1"

[dev-dependencies]
libc = "0.2"
static_assertions = "1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
